Базовые настройки и конфигурация

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,14 @@
+ktor {
+    deployment {
+        host = ${HOST}
+        port = ${PORT}
+    }
+    application {
+        modules = [ ru.utilityorders.backend.ApplicationKt.plugins ]
+    }
+}
+
 jwt {
-    secret = "secret"
+    realm = "realm"
+    secret = ${JWT_SECRET}
 }
