--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 kotlin.code.style=official
+
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=256m -XX:+UseSerialGC
+kotlin.daemon.jvmargs=-Xmx384m
